@@ -1,6 +1,6 @@
 Tikiwiki Changelog
 ------------------
-$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.108 2003-09-24 14:02:19 dheltzel Exp $
+$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.109 2003-09-24 18:16:26 lrargerich Exp $
 
 All developers are invited to add relevant changes in that file as they
 apply them to the CVS source. You can optionnaly indicate an identifer
@@ -18,6 +18,9 @@ Please wrap your lines to 80 characters and indent them with spaces only.
 Version 1.8 --
 <http://tikiwiki.org/ReleaseProcess18>
 
+* [NEW] Wiki pages can be cached or not cached individually, this setting overrides
+  the global setting for caching wiki pages. (Allows to have all pages cached but
+  one or no pages cached but some, refresh times can differ too)
 * [NEW] Events added, now articles can be normal articles, reviews or events
 * [FIX] article topics no longer require an image file to be uploaded
 * [MOD] tiki-list_articles now accepts type and topic parms to filter articles
